--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Introduction</h2>
             <div class="container">
                 <div class="image">
-                    <img src="../My WEB-SITE/image/flag.jpg">
+                    <img src="image/flag.jpg">
             </div>
             <p> Hi there! I'm Saifers Rasaily, <br>
                 I was born before 25years in country Nepal. <br>
